--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <nav class="menu">
                 <a class="menu__item" href="index.html" >Home</a>
                 <a class="menu__item" href="about.html">Sobre mim</a>
-                <a class="menu__item" href="cv.html">Meu Curriculo</a>
+                <a class="menu__item" href="cv.html">Meu Portifólio</a>
             </nav>
         </header>
 
