--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <link rel="stylesheet" href="./styles/style.css"
+        <link rel="stylesheet" href="./styles/style.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
 
             <div class="presentation__text">
 
-                <h1 class="presentation__text__1">Me chamo <strong>Kauan Iasin</strong>, especialista em <strong>CSS, HTML e REACT</strong></h1>
+                <h1 class="presentation__text__1">Sou <strong>Kauan Iasin</strong>, especialista em <strong>CSS, HTML e REACT</strong></h1>
                 <p class="presentation__text__2">Desde sempre fui apaixonado por tecnologia e internet, sempre vi em mim a vocação para trabalhar dentro dessa área! <br> Então, decidi estudar mais fundo e me tornar um verdadeiro desenvolvedor para que assim, eu pudesse dar incio a minha carreira. <br> Agora, busco algumas oportunidades de colocar os meus conhecimentos e talentos em prática.<br><strong>Que tal conversamos sobre?</strong></p>
 
             </div>
