--- a/cv.html
+++ b/cv.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="cv__content__container__projects cv__block">
                     <h2 class="cv__title">Conheça meus projetos</h2>
-                    <p class="cv__p">Landing page</p>
+                    <a class="cv__p" href="https://balle-bot-seven.vercel.app/">Landing page</a>
                     <p class="cv__p">Livraria On-line</p>
                 </div>
 
