--- a/cv.html
+++ b/cv.html
@@ -35,8 +35,8 @@
                 </div>
                 <div class="cv__content__container__projects cv__block">
                     <h2 class="cv__title">Conheça meus projetos</h2>
-                    <a class="cv__p" href="https://balle-bot-seven.vercel.app/">Landing page</a>
-                    <p class="cv__p">Livraria On-line</p>
+                    <a class="cv__a" href="https://balle-bot-seven.vercel.app/">Landing page</a>
+                    <a class="cv__a">Livraria On-line</a>
                 </div>
 
             </main>
