--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <h1> Eleve seu negócio a outro nível com um <strong>Front-end</strong> de qualidade!
                         </h1>
                     </section>
-                    <section class="presentation__text__2"
+                    <section class="presentation__text__2">
                         <p> Olá! Sou <strong>Kauan Iasin</strong>, desenvolvedor Front-end com especialidade em <strong>React, HTML e CSS.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
                         </p>
                     </section>
