--- a/cv.html
+++ b/cv.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
-    <html lang="pt-br">
-        <head>
-            <link rel="stylesheet" href="styles/style.css">
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Portifólio</title>
-        </head>
+<html lang="pt-br">
 
-        <body>
-            <header>
-                <nav class="menu">
-                <a class="menu__item" href="index.html" >Home</a>
-                <a class="menu__item" href="about.html">Sobre mim</a>
-                <a class="menu__item" href="cv.html">Meu Portifólio</a>
-                </nav>
-            </header>
+<head>
+    <link rel="stylesheet" href="styles/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portifólio</title>
+</head>
 
-            <main class="cv__main">
-                <div class="cv__img__container cv__block">
-                    <img class="cv__img" src="/assets/kauanimg.jpeg" alt="Imagem De Perfi Kauan">   
-                </div>
-                <div class="cv__content__container__habilities cv__block">
-                    <h2 class="cv__title">Habilidades</h2>
-                    <p class="cv__p">Mobile first, HTML, CSS, React, Responsividade.
-                    </p>
-                </div>
-                <div class="cv__content__container__formation cv__block">
-                    <h2 class="cv__title">Formações</h2>
-                    <p class="cv__p">formado em Front-end através da Alura</p>
-                </div>
-                <div class="cv__block">
+<body>
+    <header>
+        <nav class="menu">
+            <a class="menu__item" href="index.html">Home</a>
+            <a class="menu__item" href="about.html">Sobre mim</a>
+            <a class="menu__item" href="cv.html">Meu Portifólio</a>
+        </nav>
+    </header>
 
-                </div>
-                <div class="cv__content__container__projects cv__block">
-                    <h2 class="cv__title">Conheça meus projetos</h2>
-                    <a class="cv__a" href="https://balle-bot-seven.vercel.app/">Landing page</a>
-                    <a class="cv__a">Livraria On-line</a>
-                </div>
+    <main class="cv__main">
+        <div class="cv__img__container cv__block">
+            <img class="cv__img" src="/assets/kauanimg.jpeg" alt="Imagem De Perfi Kauan">
+        </div>
+        <div class="cv__content__container__habilities cv__block">
+            <h2 class="cv__title">Habilidades</h2>
+            <p class="cv__p">Mobile first, HTML, CSS, React, Responsividade.
+            </p>
+        </div>
+        <div class="cv__content__container__formation cv__block">
+            <h2 class="cv__title">Formações</h2>
+            <p class="cv__p">formado em Front-end através da Alura</p>
+        </div>
+        <div class="cv__block">
 
-            </main>
-            
-            <footer>
-                    <footer class="rodape">
-                        <p>Desenvolvido por Kauan Iasin.
-                        </p>
-            </footer>
-        </body>
+        </div>
+        <div class="cv__content__container__projects cv__block">
+            <h2 class="cv__title">Conheça meus projetos</h2>
+            <a class="cv__a" href="https://balle-bot-seven.vercel.app/">Landing page</a>
+            <a class="cv__a" href="https://alura-plus-gilt-beta.vercel.app/">Landing page 2</a>
+        </div>
+
+    </main>
+
+    <footer>
+        <footer class="rodape">
+            <p>Desenvolvido por Kauan Iasin.
+            </p>
+        </footer>
+</body>
+
 </html>
