--- a/about.html
+++ b/about.html
@@ -56,17 +56,17 @@
 
     <main class="presentation">
 
-        <div class="presentation__text">
+        <section class="presentation__text">
 
             <h1 class="presentation__text__1">Sou <strong>Kauan Iasin</strong>, especialista em <strong>CSS, HTML e
                     REACT</strong></h1>
-            <p class="presentation__text__2">Desde sempre fui apaixonado por tecnologia e internet, sempre vi em mim a
-                vocação para trabalhar dentro dessa área! <br> Então, decidi estudar mais fundo e me tornar um
-                verdadeiro desenvolvedor para que assim, eu pudesse dar incio a minha carreira. <br> Agora, busco
-                algumas oportunidades de colocar os meus conhecimentos e talentos em prática.<br><strong>Que tal
+            <p class="presentation__text__2">&nbsp &nbsp &nbsp Desde sempre fui apaixonado por tecnologia e internet, sempre vi em mim a
+                vocação para trabalhar dentro dessa área! <br> <br>&nbsp &nbsp &nbsp Então, decidi estudar mais fundo e me tornar um
+                verdadeiro desenvolvedor para que assim, eu pudesse dar incio a minha carreira. <br><br> &nbsp &nbsp &nbspAgora, busco
+                algumas oportunidades de colocar os meus conhecimentos e talentos em prática.<br><br><strong>Que tal
                     conversamos sobre?</strong></p>
 
-        </div>
+        </section>
 
         <section class="presentation__img">
 
