--- a/cv.html
+++ b/cv.html
@@ -71,6 +71,7 @@
             <h2 class="cv__title">Conheça meus projetos</h2>
             <a class="cv__a" href="https://balle-bot-seven.vercel.app/">Landing page</a>
             <a class="cv__a" href="https://alura-plus-gilt-beta.vercel.app/">Landing page 2</a>
+            <a class="cv__a" href="https://alura-books-ivory-kappa.vercel.app/">Home Page de uma Livraria digital</a>
         </div>
     </main>
 
