--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         content="Página descritiva sobre Kauan Iasin, um desenvolvedor front-end especialista em HTML, CSS e react.">
     <link rel="stylesheet" href="/styles/about.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="/assets/logo.png" type="image/png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
