--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="/styles/cv.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="/assets/logo.png" type="image/png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
