--- a/cv.html
+++ b/cv.html
@@ -73,6 +73,7 @@
             <a class="cv__a" href="https://balle-bot-seven.vercel.app/">Landing page</a>
             <a class="cv__a" href="https://alura-plus-gilt-beta.vercel.app/">Landing page 2</a>
             <a class="cv__a" href="https://alura-books-ivory-kappa.vercel.app/">Home Page de uma Livraria digital</a>
+            <a class="cv__a" href="https://alura-fokus-five.vercel.app/">Contador Pomodoro</a>
         </div>
     </main>
 
