Corrigindo erro de digitação

--- a/cv.html
+++ b/cv.html
@@ -74,7 +74,7 @@
             <a class="cv__a" href="https://alura-plus-gilt-beta.vercel.app/">Landing page 2</a>
             <a class="cv__a" href="https://alura-books-ivory-kappa.vercel.app/">Home Page de uma Livraria digital</a>
             <a class="cv__a" href="https://alura-fokus-five.vercel.app/">Contador Pomodoro</a>
-            <a class="cv__a" href="https://organo-by-sr-kain.vercel.app/">Gerenciador de pessoas e times usando </a>
+            <a class="cv__a" href="https://organo-by-sr-kain.vercel.app/">Gerenciador de pessoas e times usando React.js</a>
         </div>
     </main>
 
